# model-upload-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml  test.yml
docs/: agent-workflow.md
examples/: AGENTS.md  mug.toml
mug/: __init__.py  apply.py  baseline.py  cli.py  config.py  gitaware.py  history.py  sandbox.py  scanner.py  snapshot.py  templates.py  ui.py  update.py  utils.py  workspace.py
tests/: test_core.py  test_definitive.py
