[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-upload-guard"
version = "0.2.2"
description = "Model-agnostic safety boundary for sharing code with AI agents and applying their changes safely."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Davide Volpato and contributors"}]
keywords = ["ai", "security", "sandbox", "secrets", "code-agent", "upload"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]

[project.scripts]
mug = "mug.cli:main"

[tool.setuptools]
packages = ["mug"]
