[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-upload-guard"
version = "0.3.2"
description = "Model-agnostic safety boundary for sharing code with AI agents and applying their changes safely."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Davide Volpato and contributors"}]
keywords = ["ai", "security", "sandbox", "secrets", "code-agent", "upload"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/Amaraciuri/model-upload-guard"
Documentation = "https://github.com/Amaraciuri/model-upload-guard#readme"
Changelog = "https://github.com/Amaraciuri/model-upload-guard/blob/main/CHANGELOG.md"
Security = "https://github.com/Amaraciuri/model-upload-guard/blob/main/SECURITY.md"
Repository = "https://github.com/Amaraciuri/model-upload-guard"

[project.scripts]
mug = "mug.cli:main"

[tool.setuptools]
packages = ["mug"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
